--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -79,7 +79,7 @@ $lightGreen : #b9e7e7;
 
                 .logo{
                     img{
-                        width: 8em;
+                        width: 11em;
                     }
                 }
                 .links{
@@ -111,6 +111,91 @@ $lightGreen : #b9e7e7;
                             color: rgb(0, 0, 0);
                             background-color: rgb(255, 255, 255);
                             border: 0.1em solid rgb(35, 174, 255);
+                        }
+                    }
+                }
+            }
+        }
+        //Footer
+
+        footer{
+            margin-top: 10em;
+            padding: 1em;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            font-size: 0.8em;
+            img{
+                height: 7em;
+            }
+        }
+
+        //Home
+
+        .home{
+
+            .posts{
+                margin-top: 2.5em;
+                display: flex;
+                flex-direction: column;
+                gap: 10em;
+
+                .post{
+                    display: flex;
+
+                    &:nth-child(2n+1){
+                        flex-direction: row-reverse;
+                    }
+
+                    .img{
+                        flex: 2;
+                        position: relative;
+
+                        &::after{
+                            content: "";
+                            width: 75%;
+                            height: 100%;
+                            background-color: $lightGreen;
+                            position: absolute;
+                            top: 1em;
+                            left: -1em;
+                            z-index: -1;
+                        }
+
+                        img{
+                            width: 19em;
+                            max-height: 23em;
+                            object-fit: cover;
+                        }
+                    }
+
+                    .content{
+                        flex: 3;
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: space-between;
+
+                        h1{
+                            font-size: 2.5em;
+                        }
+                        p{
+                            font-size: 1em;
+                        }
+
+                        button{
+                            width: max-content;
+                            padding: 0.8em 1.2em;
+                            border: none;
+                            cursor: pointer;
+                            background-color: white;
+                            border: 0.1em solid rgb(35, 174, 255);
+                            border-radius: 1.5em;
+                            color: teal;
+
+                            &:hover{
+                                background-color: rgb(35, 174, 255);
+                                color: white;
+                            }
                         }
                     }
                 }
