--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -183,6 +183,7 @@ $lightBlue : rgb(35, 174, 255);
                         }
                         p{
                             font-size: 1em;
+                            margin-right: 2em;
                         }
 
                         button{
